TESTS = test_e4c

# this lists the binaries to produce
check_PROGRAMS = test_e4c

# what flags you want to pass to the C compiler & linker
test_e4c_CFLAGS  = --pedantic -Wall -std=c99 -coverage -O0
test_e4c_SOURCES =  \
                    \
    ../src/e4c.c    \
                    \
    ../etc/e4c_rsc.c\
                    \
    html.c          \
    macros.c        \
    main.c          \
    run_a.c         \
    run_b.c         \
    run_c.c         \
    run_d.c         \
    run_e.c         \
    run_f.c         \
    run_g.c         \
    run_h.c         \
    run_i.c         \
    run_z.c         \
    run__all.c      \
    suite_a.c       \
    suite_b.c       \
    suite_c.c       \
    suite_d.c       \
    suite_e.c       \
    suite_f.c       \
    suite_g.c       \
    suite_h.c       \
    suite_i.c       \
    suite_z.c       \
    testing.c       \
    test_a01.c      \
    test_a02.c      \
    test_a03.c      \
    test_a04.c      \
    test_a05.c      \
    test_a06.c      \
    test_a07.c      \
    test_a08.c      \
    test_a09.c      \
    test_a10.c      \
    test_a11.c      \
    test_a12.c      \
    test_a13.c      \
    test_a14.c      \
    test_a15.c      \
    test_b01.c      \
    test_b02.c      \
    test_b03.c      \
    test_b04.c      \
    test_b05.c      \
    test_b06.c      \
    test_b07.c      \
    test_b08.c      \
    test_b09.c      \
    test_b10.c      \
    test_b11.c      \
    test_b12.c      \
    test_b13.c      \
    test_b14.c      \
    test_b15.c      \
    test_b16.c      \
    test_b17.c      \
    test_b18.c      \
    test_b19.c      \
    test_c01.c      \
    test_c02.c      \
    test_d01.c      \
    test_d02.c      \
    test_d03.c      \
    test_d04.c      \
    test_d05.c      \
    test_e01.c      \
    test_e02.c      \
    test_e03.c      \
    test_f01.c      \
    test_f02.c      \
    test_f03.c      \
    test_f04.c      \
    test_f05.c      \
    test_f06.c      \
    test_f07.c      \
    test_g01.c      \
    test_g02.c      \
    test_g03.c      \
    test_g04.c      \
    test_g05.c      \
    test_g06.c      \
    test_g07.c      \
    test_g08.c      \
    test_g09.c      \
    test_g10.c      \
    test_g11.c      \
    test_g12.c      \
    test_g13.c      \
    test_g14.c      \
    test_g15.c      \
    test_g16.c      \
    test_g17.c      \
    test_g18.c      \
    test_g19.c      \
    test_g20.c      \
    test_g21.c      \
    test_g22.c      \
    test_g23.c      \
    test_g24.c      \
    test_h01.c      \
    test_h02.c      \
    test_h03.c      \
    test_h04.c      \
    test_h05.c      \
    test_h06.c      \
    test_h07.c      \
    test_h08.c      \
    test_h09.c      \
    test_h10.c      \
    test_h11.c      \
    test_i01.c      \
    test_i02.c      \
    test_i03.c      \
    test_i04.c      \
    test_i05.c      \
    test_i06.c      \
    test_i07.c      \
    test_i08.c      \
    test_i09.c      \
    test_i10.c      \
    test_i11.c      \
    test_i12.c      \
    test_z01.c      \
    test_z02.c      \
    test_z03.c      \
    test_z04.c      \
    test_z05.c      \
    test_z06.c      \
    test_z07.c      \
    test_z08.c      \
    test_z09.c      \
    test_z10.c      \
    test_z11.c      \
    test_z12.c
